container spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ h6 {
 .img-example {
     border: 1px solid var(--light-gray-text);
     display: block;
+    max-width: 100%;
 }
 
 .component img {
